Make sure menu items, highlighted text remain readable when a dark primary colour is selected

--- a/resources/less/forms.less
+++ b/resources/less/forms.less
@@ -110,11 +110,13 @@ input {
 
 .dropdown-menu {
 	border-radius: 0;
-	border-color: @contrast-colour;
+	border: 0;
+	background-color: contrast(@contrast-colour);
 }
 
 .dropdown-item {
-	
+	padding: .5em;
+
 	&.active,
 	&:active,
 	&:hover {
