--- a/resources/less/general.less
+++ b/resources/less/general.less
@@ -133,8 +133,8 @@ address a:hover {
 }
 
 ::selection {
-  color: contrast(@contrast-colour);
-  background-color: @secondary-colour;
+  background-color: @contrast-colour;
+  color: @primary-colour;
 }
 
 .hidden {
